# atom-gtk

./: .gitmodules  LICENSE.md  README.md  meson.build
.github/workflows/: build.yml
data/: atom-gtk  com.github.eyelash.atom-gtk.desktop  com.github.eyelash.atom-gtk.service.in  gresource.xml  key-bindings.css  one-dark.scss
src/: application.vala  atom-glib.cc  atom-glib.h  atom-glib.vapi  atom.vapi  layout-cache.h  notebook.vala  one-dark.cc  one-dark.h  statusbar.vala  tab-label.vala  text-editor-container.vala  text-editor-widget.cc  text-editor-widget.h  text-editor-widget.vala  window.vala
